first rails app - done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle|Russo+One" rel="stylesheet">
   </head>
 
   <body>
+  <h2>Coach 2000</h2>
+  <h3>helps you to become a better person</h3>
     <%= yield %>
   </body>
 </html>
