--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+h2 {
+  font-family: 'Russo One', sans-serif;
+}
+
+h3, body {
+  font-family: 'News Cycle', sans-serif;
+}
